--- a/Kitai_Hakai.ipynb
+++ b/Kitai_Hakai.ipynb
@@ -510,8 +510,16 @@
    "id": "1f4604a0-d233-4280-825d-485f82207f1a",
    "metadata": {},
    "source": [
-    "##### Please remember that this project does not come as is without any guarantee or support of any kind. Use it at your own risk."
+    "##### Please remember that this project come as is, without any guarantee or support of any kind. Use it at your own risk."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff83c4db-781b-4737-8be3-9f9fd0d13d99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
